@@ -72,6 +72,8 @@ Zope Changes
 
     Bugs fixed
 
+      - Collector #1460: guarded_apply was too restrictive.
+
       - OFS.Traversable still used a string 'NotFound' exception.
 
       - ZPublisher would fail to recognize a XML-RPC request if the
